fix aos white space v2

--- a/app.css
+++ b/app.css
@@ -1,7 +1,6 @@
 body {
   font-family: "Nunito", sans-serif;
   background-color: #22223b;
-  overflow-x: hidden;
 }
 
 #mainNavbar .navbar-brand,
